# envdev

./: README.md  li362-san.tgz
annales/2012-06-19/: doc  doc2  formatmultipart.pl  kallsyms  listinscrits.xls  listlist.pl  listlist_test.txt  module.pm  (+8 more)
td01/: 1q1.sh  1q2.sh  1q3.sh  1q4.pl  1q4v.pl  2.txt  3q1.sh  3q2.sh  3q3.sh  3q4.sh  3q5.sh  3q6.sh  4q1.sh  4q2.sh  4q3.sh  4q4.sed  4q4.sh  4q5.sh  5.txt  5q1.pl  5q2.pl  5q3.pl  5q4.pl  5q5.pl  5q6.pl  5q6_passwd.txt  5q7.pl  5q7_numbers.txt  6q1.pl  6q1_test.txt  6q1b.pl  6q2.pl  6q3.pl  7.txt  7q1.pl  7q2.pl  7q3.pl  7q4.pl  mail.txt  mot.sh  (+5 more)
td02/: 1q3.pl  1q4.pl  1q4b.pl  3q1.pl  3q2.pl  4q1.pl  4q2.pl  4q3.pl  4q3b.pl  5q1.pl  5q2.pl  5q3.pl  6q1.pl  6q2.pl  6q4.pl  6q5.pl  7q1.pl  7q2.pl  7q3.pl  7q4.pl  7q5.pl  compte_rendu.txt  errata.txt  httpdlog.txt  lorem.txt  lowerlorem.txt  notes.txt  para.txt  pwd.txt  toto.txt  w3c.txt
td03/: 1q1.pl  1q2.pl  1q3.pl  1q4.pl  1q4_numbers.txt  1q5.pl  2q3.pl  2q4-test.html  2q4.pl  4q1.pl  6q1.pl  7q1.pl  7q2.pl  fortune.txt  fortunes.txt  fortunes2.txt  listes.txt  option.pl  telnet.html  unique.pl  unique_test.txt
td04/: 2q2.pl  makeperlexec.pl  mydu-s.pl  uudecode.pl  uuencode.pl
td05/: 2q1.pl  2q4.pl  5q1.pl
td06/: 3q2.pl  3q3.pl  5q1.pl  5q2.pl  5q3.pl  5q4.pl  5q5.pl  eratosthene.pm  eratosthene_moose.pm  eratosthene_test_moose.pl
td07/: Makefile.in  config.h.in  config.status  configure  configure.ac
td07/autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
td07/src/: ex1.c
tpsolo/: comptpair  rainbow  snortadd  uniqtext
(+64 files in other folders)
